--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ci-test-example",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
+ "scripts": {
+  "test": "npx mocha"
+}
   "devDependencies": {
     "chai": "^5.2.0",
     "mocha": "^11.5.0"
