--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "npx mocha"
+   "test": "node_modules/.bin/mocha"
   },
   "devDependencies": {
     "chai": "^5.2.0",
